--- a/frontend/src/components/index/accueil.css
+++ b/frontend/src/components/index/accueil.css
@@ -9,7 +9,7 @@
 
 #carrou > figure {
     width: 100%;
-    height: 88vh;
+    height: 500px;
 }
 
 #carrou > nav {
@@ -62,6 +62,7 @@ background: var(--VertSecondaire);
     gap: 10px;
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 #retrouver {
