connexion toujours pas fini mais bar de recherche fini dans restaurants

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,6 +25,6 @@ li {
   --h1: 25px;
   --h2: 22px;
   --nav: 20px;
-  --VertPrincipal: #057016;
-  --VertSecondaire: #16c91f;
+  --VertPrincipal: #38761d;
+  --VertSecondaire: #60914a;
 }
