--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-items: center;
     background: var(--VertPrincipal);
+    background: black;
     padding: 10px;
-    height: 100px;
+    height: 80px;
     font-family: 'Concert One', cursive;
 }
 
@@ -25,7 +26,7 @@
 .nav-links {
     display: flex;
     justify-content: space-around;
-    width: 50%;
+    width: 500px;
 }
 
 .nav-links li {
@@ -34,6 +35,8 @@
 
 .nav-links a {
     color: white;
+    padding: 5px 10px;
+    border-radius: 10px;
     text-decoration: none;
     letter-spacing: 1px;
     font-size: 18px;
