--- a/frontend/src/components/index/accueil.css
+++ b/frontend/src/components/index/accueil.css
@@ -12,49 +12,6 @@
     height: 500px;
 }
 
-#carrou > nav {
-    position: absolute;
-    width: 100%;
-    bottom: -50px;
-}
-
-#carrou > nav > ul {
-    display: flex;
-    justify-content: space-between;
-    justify-content: space-around;
-    width: 450px;
-    margin: 0 auto;
-    gap: 10px;
-    z-index: 2;
-}
-
-#carrou > nav > ul > li {
-background: var(--VertSecondaire);
- display: flex;
- justify-content: space-between;
- flex-direction: column;
- height: 100px;
- width: 110px;
-}
-
-#carrou > nav > ul > li > a {
-    width: 100%;
-    height: 60px;
-}
-
-#carrou > nav > ul > li > a > i {
-    font-size: 50px;
-    color: white;
-    text-align: center;
-    margin-top: 12px;
-}
-
-#carrou > nav > ul > li > a > p {
-    text-align: center;
-    color: white;
-    font-weight: bold;
-}
-
 #a-propos {
     width: 600px;
     margin: 10px auto;
@@ -63,6 +20,30 @@ background: var(--VertSecondaire);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+}
+
+#a-propos > h2 {
+    text-decoration: underline var(--VertPrincipal);
+    font-weight: 400;
+}
+
+#a-propos > p {
+    font-family: none;
+    font-size: 18px;
+}
+
+#a-propos > a {
+    padding: 5px;
+    border-radius: 10px;
+}
+
+#a-propos > a:hover {
+    background: var(--VertPrincipal);
+    color: white;
+    text-transform: uppercase;
+    width: max-content;
+    transition-duration: 0.5s;
+    letter-spacing: 1px;
 }
 
 #retrouver {
