--- a/frontend/src/components/restaurant/restaurant.css
+++ b/frontend/src/components/restaurant/restaurant.css
@@ -1,65 +1,27 @@
 #restaurant {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: 10px;
-    height: fit-content;
-    position: relative;
-}
-
-#restaurant > figure {
-    margin-bottom: 10px;
-    height: 400px;
-}
-
-#restaurant > section {
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 40px;
-    padding-top: 40px;
-    justify-content: center;
-    gap: 30px;
     width: 80%;
-    position: relative;
+    justify-content: space-around;
+    margin: 10px auto;
 }
 
-#restaurant > section > h3 {
-    position: absolute;
-    font-size: 22px;
-    top: 10px;
-    left: 10px;
-}
-
-#restaurant > section > article {
-    height: 400px;
-    width: 250px;
+#restaurant > article {
+    height: auto;
+    width: 400px;
     padding: 10px;
     margin: 20px 0;
     display: flex;
     flex-direction: column;
+    box-shadow: 10px 5px 2px 2px rgba(0, 0, 0, 0.103);
     gap: 10px;
 }
 
-#restaurant > section > article:hover {
-    box-shadow: 0px 0px 5px 12px rgba(0, 0, 0, 0.03);
-    transition: 0.5s;
+#restaurant > article:hover {
+    box-shadow: 0px 0px 5px 12px #61914a4b;
 }
 
-#restaurant > a {
-    z-index: 1;
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-    height: 50px;
-    width: 100px;
-    font-size: 20px;
-    background: var(--VertPrincipal);
-    border-radius: 10px;
-    border: none;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#restaurant > article > h4 {
+    margin-top: 10px;
 }
