--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 50px;
     position: relative;
     margin: 0 auto;
 }
@@ -28,13 +28,21 @@
 }
 
 .resto {
-    height: 500px;
-    width: 250px;
+    height: auto;
+    width: 400px;
     padding: 10px;
     margin: 20px 0;
     display: flex;
     flex-direction: column;
+    box-shadow: 10px 5px 2px 2px rgba(0, 0, 0, 0.103);
     gap: 10px;
+}
+
+.resto > div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    width: 100%;
 }
 
 #resto > section > .resto > a {
@@ -45,7 +53,7 @@
 /* animation */
 
 #resto > section > .resto:hover {
-    box-shadow: 0px 0px 5px 12px rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 0px 5px 12px #61914a4b;
 }
 
 #resto > section > .resto:hover > a {
@@ -55,6 +63,10 @@
     width: max-content;
     transition-duration: 0.5s;
     letter-spacing: 1px;
+}
+
+#resto > section > .resto:hover > p > a {
+    text-decoration: underline var(--VertPrincipal) 3px;
 }
 
 figure {
