image upload grace a cloudinary

--- a/frontend/src/components/restaurant/restaurant.css
+++ b/frontend/src/components/restaurant/restaurant.css
@@ -1,4 +1,4 @@
-#restaurant {
+/* #restaurant {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -24,4 +24,4 @@
 
 #restaurant > article > h4 {
     margin-top: 10px;
-}
+} */
