--- a/frontend/src/components/restaurants/searchbar/searchBar.css
+++ b/frontend/src/components/restaurants/searchbar/searchBar.css
@@ -29,3 +29,9 @@
     background: var(--VertPrincipal);
     font-weight: bold;
 }
+
+@media screen and (max-width: 646px) {
+    #searchBar {
+        margin-top: 10vh;
+    }
+}
