--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -50,34 +50,6 @@
     border-radius: 10px;
 }
 
-/* animation */
-
-#resto > section > .resto:hover {
-    box-shadow: 0px 0px 5px 12px #61914a4b;
-}
-
-#resto > section > .resto:hover > a {
-    background: var(--VertPrincipal);
-    color: white;
-    text-transform: uppercase;
-    width: max-content;
-    transition-duration: 0.5s;
-    letter-spacing: 1px;
-}
-
-#resto > section > .resto:hover > p > a {
-    text-decoration: underline var(--VertPrincipal) 3px;
-}
-
-figure {
-    width: 100%;
-    height: 250px;
-}
-
-.resto > div  {
-    position: relative;
-}
-
 .resto > div > figure {
     position: absolute;
     width: 50px;
@@ -99,20 +71,161 @@ figure {
     margin-bottom: 20px;
 }
 
+.pop-up {
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    /* display: none; */
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+
+}
+
+.pop-up > div {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 80vh;
+    align-items: center;
+    position: relative;
+    background: var(--VertSecondaire);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.pop-up > div > h3 {
+    color: white;
+    letter-spacing: 1px;
+    font-weight: 500;
+    font-size: 25px;
+}
+
+.pop-up > div > section {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    top: 90px;
+    left: 10px;
+    margin-top: 20px;
+}
+
+.pop-up > div > section > article, 
+.pop-up > div > section > p {
+    width: 40%;
+    height: auto;
+    background: white;
+    padding: 10px;
+    align-items: center;
+    border-radius: 10px;
+} 
+
+.pop-up > div > section > article {
+    display: flex;
+    justify-content: space-around;
+}
+
+.pop-up > div > figure {
+    width: 100%;
+    background: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+    margin-top: 20px;
+}
+
+
+.pop-up > div > figure > img {
+    border-radius: 10px;
+}
+
+.croix {
+    position: absolute;
+    top: 0px;
+    left: 10px;
+    font-size: 50px;
+    color: white;
+}
+
+
+/* animation */
+
+#resto > section > .resto:hover {
+    box-shadow: 0px 0px 5px 12px #61914a4b;
+}
+
+#resto > section > .resto:hover > a {
+    background: var(--VertPrincipal);
+    color: white;
+    text-transform: uppercase;
+    width: max-content;
+    transition-duration: 0.5s;
+    letter-spacing: 1px;
+}
+
+#resto > section > .resto:hover > p > a {
+    text-decoration: underline var(--VertPrincipal) 3px;
+}
+
+.menuMobile {
+    display: none;
+}
+
 @media screen and (max-width: 646px) {
     .resto {
         max-width: 100%;
-        margin-top: 20vh;
+        align-items: center;
     } 
-    
+
     #resto > h2 {
-        display: none;
+        position: fixed;
+        top: 27px;
+        left: 50%;
+        z-index: 3;
+        color: white;
+        width: auto;
+    }
+
+    .menuMobile {
+        display: block;
+        width: 100%;
+        height: 300px;
+    }
+
+    .resto > .map {
+        background: var(--VertPrincipal);
+        color: white;
+    }
+
+    .resto > div  {
+        justify-content: center;
+    }
+
+    .pop-up > div > section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .pop-up > div > section  > article {
+        width: 100%;
+    }
+
+    .pop-up > div > section > p {
+        width: 100%;
     }
 
     #resto > section > .resto:hover,
+    .resto > p,
+    .resto > button,
     #resto > section > .resto:hover > a {
         display: none;
     }
+
+
 }
 
 @media screen and (max-width: 350px) {
