--- a/frontend/src/components/connexion-user/infoRestaurant/connexion_user.css
+++ b/frontend/src/components/connexion-user/infoRestaurant/connexion_user.css
@@ -28,6 +28,74 @@ h2 {
     border-radius: 5px;
 }
 
+.formRestaurant > .eventSelect {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.formRestaurant > .eventSelect > div {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding: 5px 10px;
+    width: 300px;
+    height: fit-content;
+    border: solid 2px var(--VertPrincipal);
+    border-radius: 10px;
+}
+
+.formRestaurant .eventSelect .event-checkbox {
+    display: none;
+  }
+
+  .formRestaurant .eventSelect .event-checkbox + label::before {
+    content: "";
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    font-size: 16px;
+    border: 2px solid green;
+    background-color: white; 
+    border-radius: 4px;
+  }
+
+  .formRestaurant .eventSelect .event-checkbox:hover + label::before {
+    background: var(--VertPrincipal);
+  }
+
+  .formRestaurant .eventSelect .event-checkbox:checked + label::before {
+    background-color: green;
+  }
+
+.formRestaurant > .eventSelect > div:hover {
+    /* background: var(--VertPrincipal); */
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.3);
+    transition: 1s;
+}
+
+.formRestaurant > .eventSelect > div:has(input:checked) {
+    border-radius: 10px;
+}
+
+.formRestaurant > .eventSelect > div > label {
+    width: 100%;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .formRestaurant > button {
     width: max-content;
     margin: 10px auto;
