--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -81,7 +81,6 @@
     width: 100%;
     height: 100%;
     padding: 10%;
-
 }
 
 .pop-up > div {
@@ -94,6 +93,7 @@
     background: var(--VertSecondaire);
     padding: 20px;
     border-radius: 10px;
+    margin: 0 auto;
 }
 
 .pop-up > div > h3 {
