--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@ li {
 
 :root {
   --h1: 25px;
-  --h2: 22px;
+  --h2: 1.7rem;
   --nav: 20px;
   --VertPrincipal: #38761d;
   --VertSecondaire: #60914a;
