--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -71,6 +71,15 @@
     margin-bottom: 20px;
 }
 
+.PopUpMenu {
+    background: var(--VertPrincipal);
+    color: white;
+    text-transform: uppercase;
+    width: max-content;
+    transition-duration: 0.5s;
+    letter-spacing: 1px;
+}
+
 .pop-up {
     background: rgba(0, 0, 0, 0.8);
     position: fixed;
@@ -136,7 +145,6 @@
     height: 80%;
     margin-top: 20px;
 }
-
 
 .pop-up > div > figure > img {
     border-radius: 10px;
