form user fonctionne

--- a/frontend/src/components/connexion-user copy/infoRestaurant/connexion_user.css
+++ b/frontend/src/components/connexion-user copy/infoRestaurant/connexion_user.css
@@ -1,4 +1,4 @@
-.formReservation {
+/* .formReservation {
     height: 80vh;
     background: red;
     display: flex;
@@ -40,4 +40,4 @@
 
 .formReservation > form > article > h2:last-child{
     text-align: start;
-}
+} */
