--- a/frontend/src/components/réservation/Réservation.css
+++ b/frontend/src/components/réservation/Réservation.css
@@ -1,54 +1,46 @@
-#connexion {
-    margin: 40px 10%;
+.formReservation {
+    height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 10px 0;
-}
-
-#connexion > hgroup {
-    margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
     justify-content: center;
-    align-items: center;
 }
 
-#connexion > ul {
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0px 0px 5px 12px rgba(0, 0, 0, 0.03);
-    padding: 10px;
-    gap: 20px;
-    margin-bottom: 30px;
-    width: 400px;
-}
-
-#connexion > ul > li {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-#connexion > ul > li > input {
-    height: 25px;
-    border: none;
-    border-bottom: 1px solid black;
-    padding-left: 10px;
-    font-size: 17px;
-}
-
-#connexion > a {
-    height: 50px;
-    width: 200px;
-    font-size: 20px;
-    background: var(--VertPrincipal);
+.formReservation > form {
+    padding: 20px;
     border-radius: 10px;
-    border: none;
-    color: white;
+    border: 3px solid var(--VertPrincipal);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
+}
+
+.formReservation > form > div {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+    width: 100%;
+}
+
+.formReservation > form > button {
+    background: none;
+    border: none;
+    text-decoration: underline var(--VertPrincipal);
+    font-size: 1.2em;
+}
+
+.formReservation > form > button:hover {
+    color: white;
+    background: var(--VertPrincipal);
+    cursor: pointer;
+    padding: 0 10px;
+    border-radius: 5px;
+}
+
+.formReservation > form > div:hover {
+    border-right: solid 2px var(--VertPrincipal);
+    border-left: solid 2px var(--VertPrincipal);
 }
