--- a/frontend/src/components/connexion-user/infoRestaurant/connexion_user.css
+++ b/frontend/src/components/connexion-user/infoRestaurant/connexion_user.css
@@ -1,17 +1,24 @@
+#restaurant {
+    /* height: 80vh; */
+    display: flex;
+    justify-content: center;
+}
 .formRestaurant {
     display: flex;
     flex-direction: column;
     position: relative;
     width: 60%;
+    /* height: 80vh; */
     margin: 10px auto;
     justify-content: space-between;
     border: 1px solid var(--VertPrincipal);
-    padding: 0 20px;
+    padding: 10px 20px;
     border-radius: 10px;
-    background: rgba(245, 245, 245, 0.5);
+    background: rgba(245, 245, 245, 0.7);
 }
 
-h2 {
+.formRestaurant  h2,
+.formRestaurant > h2 + p {
     text-align: center;
     margin: 10px 0;
     width: 100%;
@@ -22,7 +29,7 @@ h2 {
     z-index: -1;
     top: 0;
     left: 0;
-    height: 120vh;
+    height: 100vh;
     width: 100%;
 }
 
@@ -113,7 +120,6 @@ margin: 50px auto;
 }
 
 .formRestaurant > button {
-    width: max-content;
     margin: 10px auto;
     padding: 10px 0;
     background: none;
@@ -134,4 +140,16 @@ margin: 50px auto;
     text-decoration: none;
     padding: 10px 5px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    .imgConnexionUser {
+        display: none;
+    }
+
+    .formRestaurant{
+        width: 100%;
+        margin-top: 80px;
+        border: none;
+    }
 }
