--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -6,6 +6,7 @@
     background: black;
     padding: 10px;
     height: 80px;
+    width: 100%;
     font-family: 'Concert One', cursive;
 }
 
@@ -62,13 +63,23 @@
         display: none;
     }
 
+    .nav-links > li {
+        border: 2px solid white;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     .nav-links > li > a {
-        font-size: 25px;
-        color: var(--VertPrincipal);
+        font-size: 1.2rem;
+        color: white;
     }
 
     .nav-links > li:hover > a {
         width: 100%;
+        text-align: center;
     }
 
     #header {
@@ -87,12 +98,12 @@
         flex-direction: column;
         align-items: center;
         position: fixed;
-        top: 9.5vh;
+        top: 80px;
         right: 0;
+        height: 100px;
         /* background: #16c91f65; */
-        background: #38761d85;
+        background: black;
         width: 100%;
-        height: 100vh;
         z-index: 3;
     }
 }
