--- a/frontend/src/components/connexion/log.css
+++ b/frontend/src/components/connexion/log.css
@@ -1,6 +1,8 @@
 #connexion > div {
     height: 85vh;
     display: flex;
+    flex-direction: column;
+    gap: 50px;
     justify-content: center;
     /* position: relative; */
     align-items: center;
@@ -11,6 +13,11 @@
     z-index: -1;
     max-width: 100%;
     filter: blur(2.5px);
+}
+
+#connexion > div > h2 {
+    color: white;
+    font-size: 1.7rem;
 }
 
 #connexion > div > form {
@@ -80,4 +87,49 @@ div > div > form > div > input {
 #connexion > div > form > a:hover {
     border: 1px solid var(--VertPrincipal);
     text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+    #connexion > div > img {
+        display: none;
+    }
+
+    #connexion > div > form > div > label,
+    #connexion > div > form > a,
+    #connexion > div > form > button,
+    #connexion > div > h2
+    {
+        color: black;
+    }
+
+    #connexion > div > h2 {
+        position: absolute;
+        top: 130px;
+    }
+
+    #connexion > div {
+        height: 100%;
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    #connexion > div > form {
+        height: 100%;
+        width: 100%;
+        margin: 200px 15px 10px 15px;
+        box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.479);
+    }
+
+    #connexion > div > form > button:hover{
+        background: none;
+        transition: none;
+        text-transform: none;
+        width: none;
+        letter-spacing: none;
+    }
+
+    #connexion > div > form > a:hover {
+        border: none;
+    }
 }
