--- a/frontend/src/components/réservation/Réservation.css
+++ b/frontend/src/components/réservation/Réservation.css
@@ -4,9 +4,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 50px auto;
 }
 
 .formReservation > form {
+    margin-top: 20px;
     padding: 20px;
     border-radius: 10px;
     border: 3px solid var(--VertPrincipal);
