--- a/frontend/src/components/connexionAdmin/searchbar/searchBar.css
+++ b/frontend/src/components/connexionAdmin/searchbar/searchBar.css
@@ -1,4 +1,4 @@
-#searchBar {
+/* #searchBar {
     height: 100px;
     display: flex;
     justify-content: center;
@@ -34,4 +34,4 @@
     #searchBar {
         margin-top: 10vh;
     }
-}
+} */
