--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 footer {
     background: black;
     width: 100%;
-    height: 100px;
+    min-height: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
