--- a/frontend/src/components/réservation/Réservation.css
+++ b/frontend/src/components/réservation/Réservation.css
@@ -1,10 +1,21 @@
+#terrain-vert {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    margin-top: none;
+}
+
 .formReservation {
-    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 50px auto;
+    /* margin-top: 100px; */
+    padding-top: 100px;
+    margin-bottom: 100px;
 }
 
 .formReservation > form {
@@ -17,6 +28,7 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+    background: rgba(255, 255, 255, 0.7);
 }
 
 .formReservation > form > div {
@@ -45,4 +57,29 @@
 .formReservation > form > div:hover {
     border-right: solid 2px var(--VertPrincipal);
     border-left: solid 2px var(--VertPrincipal);
+}
+
+.formReservation > form > figure {
+    display: none;
+}
+@media screen and (max-width: 700px) {
+
+    #terrain-vert {
+        display: none;
+    }
+
+    .formReservation > form > figure {
+        display: block;
+    }
+
+    .formReservation {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .formReservation > form {
+        width: 100%;
+        background: none;
+    }
+
 }
