--- a/frontend/Pages/inscription.css
+++ b/frontend/Pages/inscription.css
@@ -1,13 +1,11 @@
-#inscription {
-    height: 100%;
-}
 
 #inscription > div {
-    height: 85vh;
     display: flex;
     justify-content: center;
+    padding-top: 100px;
     /* position: relative; */
     align-items: center;
+    margin-bottom: 30px;
 }
 
 #inscription > div > img {
@@ -27,16 +25,12 @@
     background: rgba(245, 245, 245, 0.116);
     border: 2px solid var(--VertPrincipal);
     border-radius: 10px;
-    height: 400px;
+    /* height: 400px; */
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 15px;
-}
-
-#inscription > div > form > h2 {
-    position: absolute;
-    top: -50px;
+    margin-top: 80px;
 }
 
 #inscription > div > form > div {
@@ -49,14 +43,6 @@
 #inscription > div > form > div > label {
     color: white;
     font-size: 1.2rem;
-}
-
-div > div > form > div > input {
-    height: 30px;
-    border: 2px solid var(--VertPrincipal);
-    border-radius: 5px;
-    padding-left: 10px;
-    font-size: 1rem;
 }
 
 #inscription > div > form > button,
@@ -92,4 +78,18 @@ div > div > form > div > input {
 #inscription > div > form > a:hover {
     border: 1px solid var(--VertPrincipal);
     text-decoration: none;
+}
+
+
+@media screen and (max-width: 768px) {
+
+    #inscription > div > img {
+        display: none;
+    }
+
+    #inscription > div > form > div > label,
+    #inscription > div > form > button {
+        color: black;
+    }
+
 }
