--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,13 @@ a {
   text-decoration: none;
   color: black;
 }
+input {
+  height: 50px;
+  padding-left: 10px;
+  border: #38761d solid 2px;
+  border-radius: 10px;
+  font-size: 1rem;
+}
 
 img,
 i {
