--- a/frontend/src/components/restaurants/searchbar/searchBar.css
+++ b/frontend/src/components/restaurants/searchbar/searchBar.css
@@ -7,8 +7,9 @@
 
 #searchBar > input {
     width: 230px;
-    height: 40px;
+    height: 60px;
     font-size: 17px;
+    padding: 20px;
     border: solid var(--VertSecondaire) 2px;
 }
 
