--- a/frontend/src/components/index/accueil.css
+++ b/frontend/src/components/index/accueil.css
@@ -1,137 +1,41 @@
-#carrou {
-    position: relative;
+#index > section  {
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    margin-bottom: 100px;
-}
-
-#carrou > figure {
-    width: 100%;
-    height: 60vh;
+    margin-bottom: 50px;
 }
 
 #a-propos {
-    width: 600px;
-    margin: 0 auto;
-    gap: 10px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-#a-propos > h2 {
-    text-decoration: underline var(--VertPrincipal);
-    font-weight: 400;
+    width: 70%;
+    margin: 20px auto;
 }
 
 #a-propos > p {
-    font-family: none;
-    font-size: 18px;
-    padding-left: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
 }
 
-#a-propos > a {
-    padding: 5px;
-    border-radius: 10px;
+#index > section > p {
+    width: 70%;
 }
 
-#a-propos:hover > a {
-    background: var(--VertPrincipal);
-    color: white;
-    text-transform: uppercase;
-    width: max-content;
-    transition-duration: 0.5s;
-    letter-spacing: 1px;
-}
-
-#retrouver {
-    height: 800px;
+#index > section > section {
     display: flex;
+    width: 400px;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    width: 700px;
-    margin: 10px auto;
+    justify-content: center;
+    gap: 50px;
 }
 
-
-#retrouver > div {
-    position: relative;
-    width: 100%;
-    height: 700px;
+#index > section > section > article > p {
+    margin-bottom: 20px;
 }
 
-#retrouver > div > figure {
-    position: absolute;
-}
-
-#retrouver > div > figure > img {
-    width: 100%;
-    height: 100%;
-}
-
-#retrouver > div > figure:first-child {
-    width: 400px;
-    height: 200px;
-    top: 0;
-    right: 0;
-    z-index: 1;
-}
-
-#retrouver > div > figure:nth-child(2) {
-    width: 200px;
-    height: 150px;
-    top: 200px;
-    right: 0;
-    z-index: 1;
-}
-
-#retrouver > div > figure:nth-child(3) {
-    width: 400px;
-    height: 200px;
-    bottom: 0px;
-    right: 0;
-    z-index: 1;
-}
-
-#retrouver > div > figure:nth-child(4) {
-    width: 300px;
-    height: 300px;
-    bottom: 0px;
-    left: 0px;
-    z-index: 1;
-}
-
-#retrouver > div > figure:nth-child(5) {
-    width: 300px;
-    height: 300px;
-    bottom: 200px;
-    right: 200px;
-    z-index: 2;
-}
-
-#retrouver > div > figure:nth-child(6) {
-    width: 200px;
-    height: 150px;
-    bottom: 200px;
-    right: 0px;
-    z-index: 1;
-}
-
-#retrouver > div > figure:nth-child(7) {
-    width: 300px;
-    height: 250px;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-}
-
-#retrouver > div > figure:last-child {
-    width: 200px;
-    height: 150px;
-    top: 250px;
-    left: 0px;
-    z-index: 1;
+@media screen and (max-width: 768px) {
+    #a-propos {
+        padding-top: 100px;
+    }
 }
