ajout css final

--- a/frontend/src/components/restaurant/Uploadimage.css
+++ b/frontend/src/components/restaurant/Uploadimage.css
@@ -19,6 +19,10 @@
     border-radius: 5px;
 }
 
+#upload > div > input {
+    border: none;
+}
+
 #upload > div > button:hover {
     background: var(--VertPrincipal);
     color: white;
