--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -226,12 +226,15 @@ margin-bottom: 15px;
         margin: 10px 20px;
     } 
     .map {
-        border-left: var(--VertPrincipal) solid 2px;
-        border-right: var(--VertPrincipal) solid 2px;
+        text-decoration: underline 2px;
         height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .googleMap > p {
+        text-decoration: none;
     }
     #resto > section > .resto > a {
         justify-content: center;
