--- a/frontend/src/components/restaurants/searchbar/searchBar.css
+++ b/frontend/src/components/restaurants/searchbar/searchBar.css
@@ -1,5 +1,6 @@
 #searchBar {
-    height: 100px;
+    /* height: 100px; */
+    margin: 10px auto;
     display: flex;
     justify-content: center;
     align-items: center;
