--- a/frontend/src/components/réservation/Réservation.css
+++ b/frontend/src/components/réservation/Réservation.css
@@ -3,7 +3,7 @@
     z-index: -1;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin-top: none;
 }
@@ -14,21 +14,23 @@
     align-items: center;
     justify-content: center;
     /* margin-top: 100px; */
+    background: var(--VertPrincipal);
+    height: 100%;
     padding-top: 100px;
-    margin-bottom: 100px;
+    padding: 50px;
 }
 
 .formReservation > form {
     margin-top: 20px;
     padding: 20px;
     border-radius: 10px;
-    border: 3px solid var(--VertPrincipal);
+    /* border: 3px solid var(--VertPrincipal); */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    background: rgba(255, 255, 255, 0.7);
+    gap: 10px;
+    background: rgba(255, 255, 255, 0.918);
 }
 
 .formReservation > form > div {
