--- a/frontend/src/components/restaurants/searchbar/searchBar.css
+++ b/frontend/src/components/restaurants/searchbar/searchBar.css
@@ -4,6 +4,8 @@
   border-radius: 10px;
   margin: 20px 0;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  margin: 10px auto;
+  width: 700px;
 }
 
 .search-row {
@@ -68,4 +70,10 @@
   .search-buttons {
     flex-direction: column;
   }
+
+  #searchBar {
+  width: auto;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 }
