--- a/frontend/src/components/restaurants/restaurant.css
+++ b/frontend/src/components/restaurants/restaurant.css
@@ -4,12 +4,14 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
+    padding-bottom: 150px;
 }
 
 #resto > h2{
     width: 100%;
     text-align: center;
     margin: 10px auto;
+    font-size: 30px;
 }
 
 #resto > section {
@@ -23,7 +25,28 @@
 
 #pageResto {
     width: 100%;
-    height: 70vh;
+    height: 55vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#pageResto>  h3 {
+    position: absolute;
+    top: 120px;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.74);
+    font-size: 30px;
+    letter-spacing: 1px;
+    height: 100px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 25px;
+    padding: 15px 30px;
 }
 
 .resto {
@@ -263,7 +286,18 @@ text-align: center;
     display: none;
 } 
 
+@media screen and (max-width: 768px) {
+    #pageResto {
+        display: none;
+    }
+
+    #resto {
+         padding-top: 100px;
+    }
+}
+
 @media screen and (max-width: 700px) {
+
     .resto {
         width: 100%;
         margin: 10px 20px;
@@ -320,9 +354,7 @@ text-align: center;
     #resto > section > .resto:hover > a,
     .PopUpMenu + a,
     .PopUpMenu,
-    #pageResto {
-        display: none;
-    }
+
     .googleMap + a{
         display: block;
     }
