--- a/frontend/src/components/connexion-user/infoRestaurant/Connexion_user.css
+++ b/frontend/src/components/connexion-user/infoRestaurant/Connexion_user.css
@@ -42,6 +42,12 @@
     width: 70%;
 }
 
+.description-restaurant {
+    height: 100px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 .formRestaurant > #up {
 margin: 50px auto;
 }
